--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -32,7 +32,7 @@
         <% } %>
     </div>
     <div class="form-group">
-        <button class="btn btn-add">Login</button>
+        <button class="btn btn-log">Login</button>
     </div>
     <div class="form-label">
         Don't have account? <a href ="/user/register">Sign up here</a>
