--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -1,24 +1,89 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-
-*, *::before, *::after {
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-
-body {
+ body {
     display: flex;
+    font-size: 1.5em;
+    
     background-color: rgb(196, 195, 195);
     
-}
 
+} 
+body:not(.no-bg)::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/images/presents.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: blur(8px);
+    z-index: -1;
+}
 .main{
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     padding: 50px;
     align-items: center;
+}
+.card-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 75vh; 
+}
+.card-body-colums {
+    color: #ccc;
+    display: flex;
+    gap: 40px; 
+}
+
+
+.card-body-right {
+    flex: 1;
+    min-width: 250px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.473);
+    border: 3px solid #ccc;
+    border-radius: 20px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+    box-sizing: border-box;
+}
+
+.card-body-left {
+    align-self: center;
+    background-color: rgba(0, 0, 0, 0.432);
+    padding: 20px;
+    max-height:300px;
+    border: 3px solid #ccc;
+    border-radius: 20px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+    box-sizing: border-box; 
+}
+.card-body-left input {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box; 
+}
+.prezenty-row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    word-break: break-word;
+    overflow-wrap: break-word;
+}
+
+.linki {
+    text-decoration: none;
+    color: #007BFF;
 }
 .wrapper{
     display: flex;
@@ -28,24 +93,29 @@ body {
     width: 80%;
 }
 .list-Friends{
-    display: grid;
-    grid: auto;
+    display: flex;
+
 }
 
 .sidebar{
-    
-    width: 250px; 
+    position: fixed;
+    height: 100%;
+    width: 75px; 
     z-index: 1;
     background:rgb(53, 52, 54);
     overflow-x: hidden;
-    padding-top: 0;
+    padding-top: 10px;
     transition: 0.6s ease;
     box-shadow: 0 0 10px black;
 
 
 }
+.sidebar:hover{
+    width: 250px;
+    
+}
 .sidebar ul {
-    margin-top: 50px;
+    margin-top: 25px;
     position: relative;
     height: 97vh;
 }
@@ -65,19 +135,38 @@ body {
     display: flex;
     white-space: nowrap;
     text-decoration: none;
-    color:beige;
+    color:rgb(220, 245, 225);
     transition: background-color 0.3s, color 0.3s;
   
 
 }
+
+
 .sidebar ul li:last-child{
     position:absolute;
     bottom: 20px;
     width: 100%;
     }
-.sidebar ul li .icon{
+.sidebar ul li a .icon{
     position: relative;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 75px;
+    height: 60px;
+    font-size: 22px;
+
+  }
+
+  .sidebar ul li .text {
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 60px;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 0.6px;
+    font-weight: 500;
 }
 
 .enter-log .enter-register {
@@ -91,16 +180,11 @@ body {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
     max-width: 600px;
 }
-.card-body-colums {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 1rem;
-    width: 100%;
 
-}
 
 
 .prezenty-row{
+    color: #ccc;
     display:grid;
     grid-template-columns: 1fr 2rem;
     margin-bottom: 0.5rem;
@@ -161,17 +245,40 @@ body {
     cursor:pointer;
     font-weight:bold;
 }
+.dlt{
+    justify-self: center;
+
+}
 .btn-delete {
-    background-color: hsl(360, 100%, 84%);
-    color: hsl(360, 100%, 31%);
-    border: 1px solid hsl(360, 100%, 31%);
+    color: #ccc;
 }
 .btn-delete:hover, .btn-delete:focus{
-    background-color: hsl(360, 100%, 60%);
+    font-size: 1.2em;
+    flex-shrink: 0;
 }
-.btn-add{
-    background-color: hsla(197, 100%, 84%, 0.911);
-    border: 1px solid hsl(239, 100%, 31%)
+.btn-add {
+    font-size: 1.1rem;
+    color: #ccc;
+    position: relative;
+    overflow: hidden;
+}
+.btn-log{
+    border: 1px solid #00000057;
+}
+.btn-log:hover{
+    background-color: #007BFF;
+}
+
+.btn-add .text-hover {
+    display: none;
+}
+
+.btn-add:hover .text-default {
+    display: none;
+}
+
+.btn-add:hover .text-hover {
+    display: inline;
 }
 
 @media (max-width: 768px) {
