--- a/app/views/layouts/layout.ejs
+++ b/app/views/layouts/layout.ejs
@@ -5,9 +5,10 @@
     <title>Santa-letter</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
+     <script src="https://kit.fontawesome.com/0d249a5140.js" crossorigin="anonymous"></script>
     
 </head>
-<body>
+<body class="<%= bodyClass %>">
     
     <% if (!hideSidebar) { %>
         <%- include('../partials/sidebar') %>
