--- a/app/views/partials/sidebar.ejs
+++ b/app/views/partials/sidebar.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Santa-letter</title>
     <link rel="stylesheet" href="/styles.css">
+    <script src="https://kit.fontawesome.com/0d249a5140.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -11,34 +12,37 @@
     <ul>
         <li>
             <a href="/santa/">
-                <span class="icon"></span>
+                <span class="icon"><i class="fa-solid fa-user-large"></i></span>
                 <span class="text">Mój profil</span>
             </a>
         </li>
         <li>
-            <a href="#">
-                <span class="icon"></span>
+            <a href="/Mypresent">
+                <span class="icon"><i class="fa-solid fa-house"></i></span>
                 <span class="text">Mój prezent</span>
             </a>
         </li>
         <li>
             <a href="/friends/">
-                <span class="icon"></span>
+                <span class="icon"><i class="fa-solid fa-users"></i></span>
                 <span class="text">Znajomi</span>
             </a>
         </li>
         <li>
             <a href="#">
+                <span class="icon"><i class="fa-solid fa-envelope"></i></span>
                 <span class="text">Powiadomienia</span>
             </a>
         </li>
         <li>
             <a href="/valid">
+                <span class="icon"><i class="fa-solid fa-gift"></i></span>
                 <span class="text">Zaklepane prezenty</span>
             </a>
         </li>
         <li>
             <a href="/user/logout">
+                <span class="icon"><i class="fa-solid fa-right-from-bracket"></i></i></span>
                 <span class="text">Wyloguj</span>
             </a>
         </li>
