--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -18,7 +18,7 @@
           <button 
             class="approved-btn" 
             type="submit">
-            Zatwierdź
+            Wybierz
           </button>
         </form>
       <% } %>
